# sudo-rs

./: Cargo.toml
.github/workflows/: ci.yaml
lib/sudo-common/src/: error.rs
lib/sudo-exec/src/: interface.rs  lib.rs
src/cli/: mod.rs
src/common/: context.rs  error.rs
src/exec/: interface.rs  no_pty.rs
src/exec/use_pty/: monitor.rs  parent.rs
src/su/: context.rs
src/sudo/: pipeline.rs
src/sudoers/: policy.rs  tokens.rs
src/system/: mod.rs  wait.rs
src/system/signal/: set.rs  stream.rs
src/system/term/: user_term.rs
su/: Cargo.toml
su/src/: main.rs
